--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/E_Commerce
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Nihal gupta\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\deadp\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
